# OAIC-2025

./: .gitignore  CODEOWNERS  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yaml  labels.yaml
.github/workflows/: rigging_pr_description.yaml
.hooks/: generate_pr_description.py
media/slides/day-one/: README.md
media/slides/day-two/: README.md
